# maverik_backend

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0b2e5472511d_create_usuario_tables.py
deployments/: backend.Dockerfile
docs/: DOCKER_TROUBLESHOOTING.md  LOGGING_SYSTEM.md  PROYECTO_MAVERIK_BACKEND.md  RESUMEN_SISTEMA_LOGGING.md
maverik_backend/: __init__.py  api.py  settings.py
maverik_backend/core/: database.py  models.py  schemas.py  services.py  simple_logging.py  smtp.py
maverik_backend/utils/: auth.py
scripts/: analyze_logs.py  build_lambda.sh  start_service.sh  test_docker.bat  test_docker.sh
